WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268346
REGRESSION: A floating element can cause the latter half of a hyphenated word to disappear
https://bugs.webkit.org/show_bug.cgi?id=268346
Summary
REGRESSION: A floating element can cause the latter half of a hyphenated word...
Brad Andalman
Reported
2024-01-29 16:21:42 PST
Created
attachment 469609
[details]
HTML showing a hyphenated word missing its latter half In the attached HTML, I have a floating div followed by a single paragraph. When rendered in Safari 17.3, the latter half of the word (the “maids” of “house-maids”) is missing. The same (incorrect) behavior appears in the latest Safari Technology Preview. In Safari 16, the word isn’t hyphenated (which isn’t great), but no text is missing.
Attachments
HTML showing a hyphenated word missing its latter half
(1.42 KB, text/html)
2024-01-29 16:21 PST
,
Brad Andalman
no flags
Details
Screenshot showing the incorrect behavior in Safari, and correct behavior in Chrome and Firefox
(226.85 KB, image/png)
2024-01-29 16:22 PST
,
Brad Andalman
no flags
Details
Test reduction
(470 bytes, text/html)
2024-01-29 16:55 PST
,
alan
no flags
Details
Patch
(11.01 KB, patch)
2024-01-30 10:07 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(12.78 KB, patch)
2024-01-30 10:57 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(13.87 KB, patch)
2024-01-30 17:10 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(13.95 KB, patch)
2024-01-31 07:16 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Brad Andalman
Comment 1
2024-01-29 16:22:45 PST
Created
attachment 469610
[details]
Screenshot showing the incorrect behavior in Safari, and correct behavior in Chrome and Firefox
Radar WebKit Bug Importer
Comment 2
2024-01-29 16:28:55 PST
<
rdar://problem/121889487
>
alan
Comment 3
2024-01-29 16:55:22 PST
Created
attachment 469611
[details]
Test reduction Thank you for filing this issue! It looks like floats confuse hyphenated lines. Looking into it now.
alan
Comment 4
2024-01-30 10:07:57 PST
Created
attachment 469617
[details]
Patch
alan
Comment 5
2024-01-30 10:57:50 PST
Created
attachment 469618
[details]
Patch
Brad Andalman
Comment 6
2024-01-30 11:33:47 PST
Thank you so much for fixing this so quickly!
alan
Comment 7
2024-01-30 17:10:38 PST
Created
attachment 469623
[details]
[fast-cq]Patch
alan
Comment 8
2024-01-30 17:11:43 PST
(In reply to Brad Andalman from
comment #6
)
> Thank you so much for fixing this so quickly!
np. having a simple test reduction helps a lot!
alan
Comment 9
2024-01-31 07:16:12 PST
Created
attachment 469628
[details]
[fast-cq]Patch
EWS
Comment 10
2024-01-31 10:03:21 PST
Committed
273836@main
(9f7e229a0663): <
https://commits.webkit.org/273836@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469628
[details]
.
Brad Andalman
Comment 11
2024-04-02 16:23:39 PDT
I just downloaded macOS 14.5b1 and noticed that this fix isn’t included (even though it’s been in Safari Technology Preview for a bit). Is there a chance it might make it into the next Sonoma 14.5 beta?
alan
Comment 12
2024-04-02 18:33:46 PDT
let me look.
Brad Andalman
Comment 13
2024-04-22 09:53:56 PDT
Sorry to poke again, but just wanted to see if you know whether this might make it into the next Sonoma update. We just tested in the latest beta, and it hasn’t made it there yet… Thanks so much!
alan
Comment 14
2024-05-02 15:08:50 PDT
(In reply to Brad Andalman from
comment #13
)
> Sorry to poke again, but just wanted to see if you know whether this might > make it into the next Sonoma update. We just tested in the latest beta, and > it hasn’t made it there yet… > > Thanks so much!
Hi Brad, unfortunately I can't comment on upcoming releases. This change had caused a small regression and while the regression has already been addressed on trunk it was only discovered a few weeks ago.
Brad Andalman
Comment 15
2024-05-10 10:13:27 PDT
I totally understand. Thanks for this additional information. I’ll keep my fingers crossed for 14.6!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug