REGRESSION: A floating element can cause the latter half of a hyphenated word to disappear https://bugs.webkit.org/show_bug.cgi?id=268346 <rdar://problem/121889487>

Reviewed by Antti Koivisto.

It's okay to not being able to advance on the inline content even when it is partial (either through hyphenation or arbitrary breaking position) when
there is an intrusive float on the line.

* LayoutTests/fast/inline/intrusive-float-with-no-available-space-and-partial-content-expected.html: Added.
* LayoutTests/fast/inline/intrusive-float-with-no-available-space-and-partial-content.html: Added.
* Source/WebCore/layout/floats/FloatingContext.cpp:
(WebCore::Layout::FloatingContext::constraints const):
* Source/WebCore/layout/formattingContexts/inline/InlineContentBalancer.cpp:
(WebCore::Layout::InlineContentBalancer::initialize):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::lineLayout):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.cpp:
(WebCore::Layout::InlineFormattingUtils::leadingInlineItemPositionForNextLine):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.h:
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::placeInlineAndFloatContent):
* Source/WebCore/layout/formattingContexts/inline/IntrinsicWidthHandler.cpp:
(WebCore::Layout::IntrinsicWidthHandler::computedIntrinsicWidthForConstraint):

Canonical link: https://commits.webkit.org/273836@main