Source/WebCore/layout/floats/FloatingContext.cpp
@@ -400,7 +400,8 @@ FloatingContext::Constraints FloatingContext::constraints(LayoutUnit candidateTo
             if (!shape->lineOverlapsShapeMarginBounds(positionInShape, candidateHeight))
                 return { };
 
-            auto segment = shape->getExcludedInterval(positionInShape, candidateHeight);
+            // PolygonShape gets confused when passing in 0px height interval at vertices.
+            auto segment = shape->getExcludedInterval(positionInShape, std::max(candidateHeight, 1_lu));
             if (!segment.isValid)
                 return { };
 
